<resources>
    <string name="app_name">Melkist</string>
    <string name="site_url">https://melkist.ir</string>
    <string name="site_url_download">https://melkist.net/#download</string>
    <string name="hint_username">نام کاربری (شماره موبایل)</string>
    <string name="signup">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="hint_password">کلمه عبور</string>
    <string name="forget_user_pass">فراموشی کلمه عبور</string>
    <string name="choosing_real_estate_header">مشاور املاک</string>
    <string name="choosing_real_estate_header2">(دارای قراداد همکاری با ملکیست)</string>
    <string name="choosing_real_estate_body">این گزینه مخصوص مدیران، سرپرستان و مشاوران املاکی است که با مجموعه ملکیست قرارداد دارند</string>
    <string name="choosing_user_header">کاربرد عادی</string>
    <string name="choosing_user_header2">(بدون قرارداد همکاری با ملکیست)</string>
    <string name="choosing_user_body">درصورتی که کاربر عادی هستید و با ملکیست قرارداد ندارید می‌توانید از طریق ثبت نام به سیستم وارد شوید. برخی از امکانات نرم‌افزار برای شما قابل استفاده نمی‌باشد</string>
    <string name="search">جستجو</string>
    <string name="hint_real_estate">نام املاک خود را وارد نمایید</string>
    <string name="hint_first_name">نام خود را وارد نمایید</string>
    <string name="hint_last_name">نام خانوادگی خود را وارد کنید</string>
    <string name="hint_phone_no">لطفا شماره تلفن همراه خود را وارد نمایید</string>
    <string name="hint_national_code">کد ملی خود را وارد کنید</string>
    <string name="hint_email">ایمیل خود را وارد کنید</string>
    <string name="hint_password_signup">برای حساب کاربردی خود یک پسورد وارد کنید</string>
    <string name="commit">ثبت</string>
    <string name="error_on_empty_first_name">لطفا نام حود را وارد نمایید</string>
    <string name="error_on_empty_last_name">نام خانوادگی خود را وارد نمایید</string>
    <string name="error_on_empty_mobile_no">فیلد شماره تلفن همراه نمی تواند خالی باشد</string>
    <string name="error_on_wrong_mobile_no">شماره تلفن وارد شده اشتباه است</string>
    <string name="error_on_empty_national_code">کد ملی را وارد نمایید</string>
    <string name="error_on_wrong_national_code">کد ملی را به درستی وارد نمایید</string>
    <string name="error_on_empty_password">پسورد را وارد نمایید</string>
    <string name="error_on_wrong_password">تعداد کاراکترهای پسورد باید بیش از 8 عدد باشد</string>
    <string name="error_on_empty_real_estate">نام املاک خود را وارد نمایید</string>
    <string name="error_on_wrong_real_estate">نام املاک خود را به درستی وارد نمایید</string>
    <string name="write_ncode_mobile">لطفا کد ملی و شماره همراه خود را جهت ارسال کد تایید وارد نمایید</string>
    <string name="ncode">کد ملی</string>
    <string name="phone_no">شماره همراه</string>
    <string name="send">ارسال</string>
    <string name="write_verify_code">کد تایید پیامک شده را وارد نمایید</string>
    <string name="verify_code">کد تایید</string>
    <string name="verify">بررسی</string>
    <string name="check_phone_no_title">تایید تلفن همراه</string>
    <string name="send_verification_again_in_some_second">امکان ارسال مجدد کد در %s ثانیه</string>
    <string name="send_verification_again">ارسال مجدد کد</string>
    <string name="error_on_empty_verification_code">کد تایید را وارد نمایید</string>
    <string name="error_on_wrong_verification_code">کد تایید به صورت کامل وارد نشده است</string>
    <string name="global_error">خطایی در سیستم رخ داده است!</string>
    <string name="choose_new_password">پسورد جدید را وارد کنید</string>
    <string name="hint_new_password">پسورد جدید</string>
    <string name="confirm">تایید</string>
    <string name="choose_realestate_user_title">انتخاب نوع کاربری</string>
    <string name="choose">انتخاب کنید</string>
    <string name="choose_category_title">دسته بندی</string>
    <string name="choose_province_title">استان</string>
    <string name="choose_city_title">شهر</string>
    <string name="choose_real_estate_title">مشاور املاک</string>
    <string name="choose_supervisor_title">سرپرست</string>
    <string name="error_on_wrong_email">ایمیل خود را به درستی وارد نمایید</string>
    <string name="add">افزودن</string>
    <string name="choose_type_title">نوع آگهی</string>
    <string name="choose_sub_category_title">زیر دسته</string>
    <string name="choose_location_title">آدرس</string>
    <string name="proceed">ادامه</string>
    <string name="choosing_seeker_header">خواهان</string>
    <string name="choosing_seeker_header2">(به دنبال مورد مناسب میگردم)</string>
    <string name="choosing_seeker_header2_filer">(فیلتر فایل های خواهان)</string>
    <string name="choosing_seeker_body">شما می توانید با انتخاب این گزینه نیازمندی خودر را در قالب یک آگهی ثبت نموده تا در صورت پیدا شدن مورد مناسب، به شما اطلاع رسانی انجام گیرد</string>
    <string name="choosing_seeker_body_filter">فیلتر مواردی که خواهان مورد مناسب می باشند</string>
    <string name="choosing_owner_header">مالک</string>
    <string name="choosing_owner_header2">(می خواهم آگهی ثبت نمایم)</string>
    <string name="choosing_owner_header2_filter">(فیلتر فایل های مالک)</string>
    <string name="choosing_owner_body">شما می توانید با انتخاب این گزینه ملک مورد نظرتان را برای فروش در قالب یک آگهی ثبت نموده تا توسط سایرین دیده شده و در صورت نیاز، با شما تماس گرفته یا درخواست همکاری ارسال نمایند</string>
    <string name="choosing_owner_body_filter">فیلتر فایل های مالکین که به دنبال مشتری مناسب برای ملک خود می گردند</string>
    <string name="location_frag_header">انتخاب شهر و محله</string>
    <string name="location_frag_sub_header">شهر و محله را انتخاب نمایید و اگر در فهرست وجود ندارد نزدیکترین را انتخاب نمایید</string>
    <string name="choose_region_title">محله</string>
    <string name="choose_location_on_map">افزودن محدوده بر روی نقشه</string>
    <string name="other_location_frag_header">انتخاب سایر مناطق</string>
    <string name="other_location_frag_sub_header">اگر در منطقه اول مورد نظر شما، موردی یافت نشد، در چه منطقه دیگری می خواهید جستجو انجام گیرد. با انتخاب نکرد گزینه های زیر فقط در منطقه اول جستجو انجام می شود</string>
    <string name="choose_region_2_title">محله (سایر1)</string>
    <string name="choose_region_3_title">محله (سایر2)</string>
    <string name="add_detail_page_title">افزودن (اطلاعات تکمیلی)</string>
    <string name="edit_detail_page_title">ویرایش (اطلاعات تکمیلی)</string>
    <string name="meterage">متراژ</string>
    <string name="measurement">متراژ</string>
    <string name="room_no">تعداد خواب</string>
    <string name="room">خواب</string>
    <string name="price">قیمت</string>
    <string name="total_price">قیمت کل</string>
    <string name="descriptions">توضیحات تکمیلی</string>
    <string name="from">از</string>
    <string name="to">تا</string>
    <string name="add_picture">افزودن عکس</string>
    <string name="add_picture_sub_header">عکس هایی از فضای داخل و بیرون ملک اضافه کنید. آگهی های دارای عکس تا 30 برابر بیشتر توسط کاربران دیده می شود</string>
    <string name="enter">وارد نمایید</string>
    <string name="choose_province_city_alert_message">لطفا ابتدا شهر مورد نظر خود را انتخاب نمایید.</string>
    <string name="input">مقدار</string>
    <string name="on_empty_dialog_edittext_feild">لطفا مقدار مورد نظر خود را وارد نمایید</string>
    <string name="choose_from_camera">انتخاب از دوربین</string>
    <string name="choose_from_galery">انتخاب از گالری</string>
    <string name="need_permission">"برای ادامه به نیاز است به دریافت اجازه دسترسی به "</string>
    <string name="confirm_permission">اجازه می دهم</string>
    <string name="deny_permission">اجازه نمی دهم</string>
    <string name="somthing_goes_wrong">خطایی رخ داده لطفا مجددا اقدام نمایید</string>
    <string name="tooman">تومان</string>
    <string name="billion">میلیارد</string>
    <string name="and">و</string>
    <string name="million">میلیون</string>
    <string name="thousend">هزار</string>
    <string name="meter_squere">متر مربع</string>
    <string name="number">عدد</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wrong_username_password">نام کاربری یا کلمه عبور اشتباه است</string>
    <string name="choose_profile_pic">برای پروفایل خود عکس مناسب انتخاب نمایید</string>
    <string name="choose_profile_pic_title">عکس پروفایل</string>
    <string name="show_all_files_title">نمایش همه موارد</string>
    <string name="show_owner_files">نمایش فایل های مالک</string>
    <string name="show_seeker_files">نمایش فایل های خواهان</string>
    <string name="show_all_files">نمایش فایل های خواهان و مالک</string>
    <string name="filter">فیلتر</string>
    <string name="advertiser_title">آگهی دهنده</string>
    <string name="real_estate_title">مشاورین املاک</string>
    <string name="region">منطقه</string>
    <string name="region_other">سایر مناطق مد نظر</string>
    <string name="age_title">سال ساخت</string>
    <string name="price_per_meter">قیمت هر متر</string>
    <string name="send_cooperation_request">ارسال درخواست همکاری</string>
    <string name="price_toman">قیمت (تومان)</string>
    <string name="size_squere_meter">متراژ (مترمربع)</string>
    <string name="squere_meter">مترمربع</string>
    <string name="filter_file">فیلتر فایل ها</string>
    <string name="meter">متر</string>
    <string name="all">همه</string>
    <string name="choose_type_first">ابتدا نوع آگهی را انتخاب نمایید!</string>
    <string name="choose_type_cat_first">لطفا ابتدا نوع آگهی و دسته بندی را انتخاب نمایید!</string>
    <string name="profile">پروفایل</string>
    <string name="calculator">ماشین حساب</string>
    <string name="favorite">علاقه مندی</string>
    <string name="map">نقشه</string>
    <string name="my_name">رضا استعجاب</string>
    <string name="ai_title">سیستم هوش مصنوعی</string>
    <string name="manage_team_title">مدیریت تیم زیر مجموعه</string>
    <string name="exit_title">خروج</string>
    <string name="options_title">تنظیمات</string>
    <string name="statistics">بخش آمار</string>
    <string name="alerts">هشدارها</string>
    <string name="my_files_title">فایل های من</string>
    <string name="complete_all_fields">لطفا تمامی اطلاعات را تکمیل فرمایید</string>
    <string name="year">سال</string>
    <string name="input_right_number">مقدار صحیحی وارد نمایید</string>
    <string name="version">نسخه: %s</string>
    <string name="internet_connection_problem">اینترنت دستگاه شما خاموش است. لطفا از اتصال اینترنت اطمینان حاصل فرمایید!</string>
    <string name="quit">انصراف</string>
    <string name="retry">تلاش مجدد</string>
    <string name="contact_us_title">تماس با ما</string>
    <string name="in_box">دریافتی</string>
    <string name="out_box">ارسالی</string>
    <string name="next_phase">در حال بروزرسانی</string>
    <string name="more">بیشتر</string>
    <string name="file_details">جزئیات فایل</string>
    <string name="cooperation_request_inbox">درخواست همکاری دریافت شده</string>
    <string name="applicant_inbox">از %s %s مشاورین املاک %s</string>
    <string name="applicant">%s %s \nمشاورین املاک %s</string>
    <string name="cooperation_request_outbox">درخواست همکاری ارسال شده</string>
    <string name="applicant_outbox">به %s %s مشاورین املاک %s</string>
    <string name="region_outbox_outbox">جهت ملک %s</string>
    <string name="error_getting_data">خطا در دریافت اطلاعات!</string>
    <string name="staff_stat_title">آمار عملکرد اعضاء</string>
    <string name="rank">رتبه</string>
    <string name="member_name">نام عضو</string>
    <string name="visit">بازدید</string>
    <string name="meeting">جلسه</string>
    <string name="contract">قرارداد</string>
    <string name="conclusion">خاتمه</string>
    <string name="rank_sum">مجموع</string>
    <string name="added_files">فایل ثبتی</string>
    <string name="action_type_title">نوع عملکرد</string>
    <string name="action_date_title">تاریخ انجام عملکرد</string>
    <string name="hint_action_owner_mobile">شماره موبایل مشتری فایل</string>
    <string name="hint_action_owner_name">نام و نام خانوادگی مشتری فایل</string>
</resources>