<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icons8_google_maps_old_80"
        android:title="@string/map" />

    <!--android:title="@string/title_dashboard"-->
    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/icons8_save_close_80"
        android:title="@string/favorite"
        />

    <item
        android:id="@+id/navigation_add"
        android:title="" />
    <!--app:destination="@id/addActivity"-->
    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/icons8_calculator_64"
        android:title="@string/calculator"/>

    <item
        android:id="@+id/navigation_profle"
        android:icon="@drawable/icons8_profiles_80"
        android:title="@string/profile"/>

</menu>